--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         run: build_all.bat
 
       - name: Pack All
-        uses: ThirteenAG/zip-release@master
+        uses: Cleoude/zip-release@master
         with:
           path: ./*
           type: 'zip'
