--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag: latest
+          doNotFailIfNotFound: true
 
       - name: Upload Release
         uses: ncipollo/release-action@v1.12.0
