--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -17,16 +17,16 @@ jobs:
         run: build_all.bat
 
       - name: Pack All
-        uses: Cleoude/zip-release@master
+        uses: ThirteenAG/zip-release@master
         with:
           path: ./*
           type: 'zip'
           filename: 'SACCF.7z'
           exclusions: '.git .github .resources .ipls .cdimages build_all.bat readme.md .cuts'
 
-      - name: Get release info
+      - name: Get Release Info
         id: release_info
-        uses: cardinalby/git-get-release-action@1.2.4
+        uses: cardinalby/git-get-release-action@1.2.2
         env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
