--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           path: ./*
           type: 'zip'
-          filename: 'SACCF.Extras.7z'
+          filename: 'SACCF-Extras.7z'
           exclusions: '.git .github .resources .ipls models modloader scripts .cdimages build_all.bat readme.md'
 
       - name: Get Release Info
