--- a/modloader/CommunityCutsceneFixes/cleo/Doberman Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Doberman Fix.ini
@@ -3,5 +3,7 @@
 [Mission]
 Grass = 1 ; Enables Grass's special Model in game
 Fix = 1 ; Restores Grass's another dialogues. Randomized.
+Model = GRASS
+Ballas = ktb1,ktb2,ktb3
 
 ; Busta C.R.A.S.H. set me up! Tenpenny sold me out!
