--- a/modloader/CommunityCutsceneFixes/cleo/Drive by Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Drive by Fix.ini
@@ -4,3 +4,8 @@
 Sweet = 1 ; Enables Sweet's special Model in game
 Smoke = 1 ; Enables Smoke's special Model in game
 Ryder = 1 ; Enables Ryder's special Model in game
+Sweet2 = 1 ; Enables Sweet's special Model 2 in game
+SweetModel = SWEET2
+SmokeModel = SMOKE5
+RyderModel = RYDER4
+SweetModel2 = SWEET4
