--- a/modloader/CommunityCutsceneFixes/cleo/Green Sabre Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Green Sabre Fix.ini
@@ -6,8 +6,11 @@ CesarCall = 1 ; Adds mouth movement for Cesar's Phonecall.
 ExitFix = 1 ; Fixes CJ getting out of Bravura.
 SweetCall = 1 ; Adds phone animation and mouth movement for Sweet's.
 SpawnFix = 1 ; Fixes Fam1 and Sweet spawning on the same coord.
-Families = 1 ; Fixes families all being Fam1.
+GangFix = 1 ; Fixes gangs all being Fam1 and Ballas1.
 MuteSweet = 1 ; Mutes sweet so he won't talk when CJ colliding him.
 Dialogue = 1 ; Adds mouth movement for CJ and Sweet.
 RestoreLines = 1 ; Restores Johnson Brother's unused lines.
 PoliceFix = 1 ; Fixes Police's holding pistol.
+Fam = 105,106,107 
+Ballas = 102,103,104
+SweetModel = SWTSHOT
