--- a/modloader/CommunityCutsceneFixes/cleo/Management Issues Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Management Issues Fix.ini
@@ -4,3 +4,4 @@
 Alan = 1 ; Enables Alan's special Model in game
 PhoneFix = 1 ; CJ picking up the phone inside the vehicle
 TalkFix = 1; Gives Alan mouth animation when he talks
+Model = ALAN
