--- a/modloader/CommunityCutsceneFixes/cleo/Reuniting the Families Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Reuniting the Families Fix.ini
@@ -4,9 +4,14 @@
 Sweet = 1 ; Enables Sweet's special Model in game
 Smoke = 1 ; Enables Smoke's special Model in game
 Ryder = 1 ; Enables Ryder's special Model in game
+SweetModel = SWEET6
+SmokeModel = SMOKE4
+RyderModel = RYDER4
+Fam1 = fam4,fam5
+Fam2 = sev1,sev2,sev3
+Fam3 = Tem1,tem2,tem3
 WalkstyleFix = 1 ; Fixes Homies' walkstyle.
 GetInfix = 1 ;  Fixes Homies running to get in the car.
-Families = 1 ; Enables Seville Boulevard and Temple Drive Families Models
 MouthFix = 1 ; Fix mouth is not moving when characters are talking.
 RestoreLine = 1 ; Restores Families member's line.
 K Here = 1 ; Gives Ryder K and animation.
