--- a/modloader/CommunityCutsceneFixes/cleo/Sweet's Girl Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Sweet's Girl Fix.ini
@@ -2,5 +2,7 @@
 
 [Mission]
 Slut = 1 ; Enables Sweet's Girl special Model in game
-Seville = 1 ; Enables Seville Boulevard Families Models
 Driveby = 1 ; seville boulevard families will do drive by.
+SlutModel = SLUT
+Fam1=sev1,sev3
+Fam2=sev2
