--- a/modloader/CommunityCutsceneFixes/cleo/House Party Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/House Party Fix.ini
@@ -4,3 +4,7 @@
 Sweet = 1 ; Enables Sweet's special Model in game
 Ryder = 1 ; Enables Ryder's special Model in game
 WalkstyleFix = 1 ; Fixes Homies' walkstyle.
+SweetModel = SWEET5
+RyderModel = RYDER4
+Fam = 105,106
+Ballas = 102,103,104
