--- a/modloader/CommunityCutsceneFixes/cleo/Just Business Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Just Business Fix.ini
@@ -4,3 +4,4 @@
 Smoke = 1 ; Enables Smoke's special Model in game
 Walkstyle = 1 ; Fixes Smoke's walkstyle.
 ChairFix = 1 ; fixes floating of peds sitting on the chair.
+SmokeModel = SMOKE3
