--- a/modloader/CommunityCutsceneFixes/cleo/Tagging up Turf Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Tagging up Turf Fix.ini
@@ -6,3 +6,5 @@ Smoke = 1 ; Enables Smoke's special Model in game
 Seatfix = 1 ; Fixes Sweet's move to driverseat in East Los Santos.
 BallasTag = 1 ; Ballas member sprays tag on the wall.
 CrashReactions = 1 ; Restores Sweet's crash reaction lines.
+SweetModel = SWEET3
+SmokeModel = SMOKE2
