--- a/modloader/CommunityCutsceneFixes/cleo/Drive by Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Drive by Fix.ini
@@ -9,6 +9,6 @@ SweetModel = SWEET2
 SmokeModel = SMOKE5
 RyderModel = RYDER4
 SweetModel2 = SWEET4
-Ballas1 = rhb1
-Ballas2 = rhb2
-Ballas3 = rhb3
+Kilo1 = ktb1
+Kilo2 = ktb2
+Kilo3 = ktb3
