--- a/modloader/CommunityCutsceneFixes/cleo/Madd Dogg Rhymes Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Madd Dogg Rhymes Fix.ini
@@ -6,6 +6,7 @@ Balaclava = 1 ; CJ wears balaclava and this makes the mission and stealth more r
 Tanner = 0 ; Adds Driv3r on TV and makes the scene funnier.
 Joystick = 1 ; Bodyguard will have a joystick.
 Fix = 1 ; CJ hands OG Loc rhymes book and the greeting changes.
+LocModel = OGBURG
 
 [ID]
 Tannertv = 17993
