--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -8,6 +8,8 @@ CloneRemoverSpawnDelay=3
 CloneRemoverIncludeVariations=
 CloneRemoverExcludeModels=102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,120,121,122,123,124,125,126,127,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288
 
+;Ballas
+
 [102]
 Global=102,102,102,ballas4,ballas4
 JEF3A=rhb1
@@ -22,18 +24,26 @@ ELS2=rhb1
 LIND3=rhb1
 LIND2A=rhb1
 LIND2B=rhb1
+CHC2B=rhb1
+CHC3=rhb1
+LDOC1B=rhb1
+LDOC1A=rhb1
 GLN1=ktb1
+GLN2A=ktb1
 LIND1A=ktb1
 LIND1B=ktb1
 SUN1=tdb1
 SUN2=tdb1
+SUN3A=tdb1
 SUN3B=tdb1
 SUN3B=tdb1
 SUN3C=tdb1
 SUN4=tdb1
 IWD2=
 LACRAK=
+VIN2=
 MergeInteriorsWithCitiesAndZones=
+MergeZonesWithCities=
 
 [103]
 Global=
@@ -51,7 +61,12 @@ LIND2A=rhb2
 LIND2B=rhb2
 LIND4A=rhb2
 LIND4C=rhb2
+CHC2B=rhb2
+CHC3=rhb2
+LDOC1B=rhb2
+LDOC1A=rhb2
 GLN1=ktb2
+GLN2A=ktb2
 LIND1A=ktb2
 LIND1B=ktb2
 SUN1=tdb2
@@ -60,6 +75,8 @@ SUN3A=tdb2
 SUN3B=tdb2
 SUN3C=tdb2
 SUN4=tdb2
+VIN2=
+MergeZonesWithCities=
 
 [104]
 Global=104,104,104,ballas5,ballas5
@@ -75,7 +92,12 @@ ELS2=rhb3
 LIND3=rhb3
 LIND2A=rhb3
 LIND2B=rhb3
+CHC2B=rhb3
+CHC3=rhb3
+LDOC1B=rhb3
+LDOC1A=rhb3
 GLN1=ktb3
+GLN2A=ktb3
 LIND1A=ktb3
 LIND1B=ktb3
 VIN2=
@@ -85,12 +107,15 @@ SUN3A=tdb3
 SUN3B=tdb3
 SUN3C=tdb3
 SUN4=tdb3
+MergeZonesWithCities=
 
-//Families
+;Families
+
 [105]
 Global=
-GAN1=
+GAN1=105,fam4
 PLS=sev1
+LIND4A=sev1
 SUN1=tem1
 SUN2=tem1
 SUN3A=tem1
@@ -98,47 +123,64 @@ SUN3B=tem1
 SUN3C=tem1
 SUN4=tem1
 UseParentVoice=1
+MergeInteriorsWithCitiesAndZones=
+MergeZonesWithCities=
 
 [106]
 Global=
-GAN1=
+GAN1=106,107,fam5
 PLS=sev2
+LIND4A=sev2
 SUN1=tem2
 SUN2=tem2
 SUN3A=tem2
 SUN3B=tem2
 SUN3C=tem2
 SUN4=tem2
-JEF1A=
-ELS1A=
-MOTEL1=
 UseParentVoice=1
+MergeInteriorsWithCitiesAndZones=
+MergeZonesWithCities=
 
 [107]
 Global=107,107,107,fam4,fam5
 GAN1=
 PLS=sev3
+LIND4A=sev3
 SUN1=tem3
 SUN2=tem3
 SUN3A=tem3
 SUN3B=tem3
 SUN3C=tem3
 SUN4=tem3
-JEF1A=
-ELS1A=
-MOTEL1=
 UseParentVoice=1
-MergeZonesWithGlobal=
+MergeInteriorsWithCitiesAndZones=
+MergeZonesWithCities=
+
+;Vagos
+[108]
+Global=108,lsv4
+
+[110]
+Global=110,lsv5
+
+;Aztecas
+[115]
+Global=115,vla4
+
+[116]
+Global=116,vla5
+
+;Triads
 
 [164]
 TRICAS=117,118
 [163]
 TRICAS=117,118
 
+;Missions
+
 [12]
-PLS=SLUT
-Voice=13
-AnimGroup=WOMAN
+PLS=
 
 [20]
 SUN1=
@@ -146,7 +188,6 @@ SUN1=
 [28]
 IWD2=
 LACRAK=
-Voice=
 MergeInteriorsWithCitiesAndZones=
 
 [109]
@@ -168,3 +209,21 @@ UseParentVoice=
 [299]
 Global=
 UseParentVoice=
+
+;New Special Characters
+[BALMAN]
+Voice=103
+
+[SLUT]
+Voice=178
+AnimGroup=woman
+
+[sweet,sweet2,sweet3,sweet4,sweet5,sweet6]
+AnimGroup=gang2
+
+[smoke,smoke2,smoke3,smoke4,smoke5,tdb1]
+AnimGroup=fat
+
+[ryder,ryder2,ryder3,ryder4]
+AnimGroup=gang1
+
