--- a/modloader/CommunityCutsceneFixes/cleo/Green Sabre Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Green Sabre Fix.ini
@@ -13,4 +13,7 @@ RestoreLines = 1 ; Restores Johnson Brother's unused lines.
 PoliceFix = 1 ; Fixes Police's holding pistol.
 Fam = 105,106,107 
 Ballas = 102,103,104
+Rollin = rhb1,rhb2,rhb3
+Kilo = ktb1,ktb2,ktb3
+Temple = tdb1,tdb2,tdb3
 SweetModel = SWTSHOT
