--- a/modloader/CommunityCutsceneFixes/cleo/House Party Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/House Party Fix.ini
@@ -7,4 +7,8 @@ WalkstyleFix = 1 ; Fixes Homies' walkstyle.
 SweetModel = SWEET5
 RyderModel = RYDER4
 Fam = 105,106
-Ballas = 102,103,104
+First = 102,103,104
+Second = rhb1,rhb2,rhb3
+Third1 = ktb1,tdb1
+Third2 = ktb2,tdb2,102
+Third3 = ktb3,tdb3,102
