--- a/modloader/CommunityCutsceneFixes/cleo/Los Sepulcros Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Los Sepulcros Fix.ini
@@ -5,3 +5,5 @@ Kane = 1 ; Enables Kane's special Model in game
 Model = KANE
 Fam1=105,fam4
 Fam2=106,107,fam5
+Ballas1=102,ballas4,rhb1
+Ballas2=103,rhb2,ballas5
