--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -122,6 +122,10 @@ SUN3A=tem1
 SUN3B=tem1
 SUN3C=tem1
 SUN4=tem1
+JEF1A=
+ELS1A=
+CHC2B=
+MOTEL=
 UseParentVoice=1
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
@@ -137,6 +141,10 @@ SUN3A=tem2
 SUN3B=tem2
 SUN3C=tem2
 SUN4=tem2
+JEF1A=
+ELS1A=
+CHC2B=
+MOTEL=
 UseParentVoice=1
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
@@ -152,6 +160,10 @@ SUN3A=tem3
 SUN3B=tem3
 SUN3C=tem3
 SUN4=tem3
+JEF1A=
+ELS1A=
+CHC2B=
+MOTEL=
 UseParentVoice=1
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
@@ -164,11 +176,11 @@ Global=108,lsv4
 Global=110,lsv5
 
 ;Aztecas
-[115]
-Global=115,vla4
+[114]
+Global=114,vla4
 
-[116]
-Global=116,vla5
+[115]
+Global=115,vla5
 
 ;Triads
 
@@ -176,6 +188,16 @@ Global=116,vla5
 TRICAS=117,118
 [163]
 TRICAS=117,118
+
+;Cops
+[283]
+Desert=288
+
+[284]
+SanFierro=SFPDM1
+LasVenturas=LVPDM1
+Desert=DSHERM1
+Countryside=SSHERM1
 
 ;Missions
 
