--- a/modloader/CommunityCutsceneFixes/ModelVariations_Vehicles.ini
+++ b/modloader/CommunityCutsceneFixes/ModelVariations_Vehicles.ini
@@ -2,9 +2,22 @@
 ChangeCarGenerators=0
 ChangeScriptedCars=0
 DisablePayAndSpray=1
-EnableLights=0
+EnableLights=1
 EnableSideMissions=1
 EnableSiren=1
-EnableSpecialFeatures=0
+EnableSpecialFeatures=1
 ExcludeCarGeneratorModels=492,600
-ExcludeModelsFromInheritance=596,597,598,599,490,497,472,432,433
+ExcludeModelsFromInheritance=596,597,598,599,490,497,472,432,433,523
+[599]
+Global=599,14002
+Wanted1=599,14002
+Wanted2=599,14002
+Wanted3=599,14002
+Wanted4=599
+Wanted5=599
+Wanted6=599
+[523]
+SanFierro=14000
+LasVenturas=14001
+[14000,14001,14002]
+ParentModel=523
