new voice tweak

--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -1,6 +1,6 @@
 [Settings]
 RecursiveVariations=1
-UseParentVoices=1
+UseParentVoices=0
 EnableCloneRemover=0
 CloneRemoverDisableOnMission=0
 CloneRemoverIncludeVehicleOccupants=1
@@ -113,7 +113,7 @@ MergeZonesWithCities=
 
 [105]
 Global=
-GAN1=105,fam4
+GAN1=
 PLS=sev1
 LIND4A=sev1
 SUN1=tem1
@@ -126,13 +126,13 @@ JEF1A=
 ELS1A=
 CHC2B=
 MOTEL=
-UseParentVoice=1
+UseParentVoice=
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
 
 [106]
 Global=
-GAN1=106,107,fam5
+GAN1=
 PLS=sev2
 LIND4A=sev2
 SUN1=tem2
@@ -145,7 +145,7 @@ JEF1A=
 ELS1A=
 CHC2B=
 MOTEL=
-UseParentVoice=1
+UseParentVoice=
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
 
@@ -164,7 +164,7 @@ JEF1A=
 ELS1A=
 CHC2B=
 MOTEL=
-UseParentVoice=1
+UseParentVoice=
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
 
@@ -240,12 +240,66 @@ Voice=103
 Voice=178
 AnimGroup=woman
 
-[sweet,sweet2,sweet3,sweet4,sweet5,sweet6]
+[sweet,sweet2,sweet3,sweet4,sweet5,sweet6,swtshot]
 AnimGroup=gang2
+UseParentVoice=1
 
-[smoke,smoke2,smoke3,smoke4,smoke5,tdb1]
-AnimGroup=fat
+[smoke,smoke2,smoke3,smoke4,smoke5]
+AnimGroup=fatman
+UseParentVoice=1
 
 [ryder,ryder2,ryder3,ryder4]
 AnimGroup=gang1
+UseParentVoice=1
 
+[cesar3]
+UseParentVoice=1
+
+[freddy]
+UseParentVoice=1
+
+[grass]
+UseParentVoice=1
+
+[kane]
+UseParentVoice=1
+
+[ogburg]
+UseParentVoice=1
+
+[ballas4,ballas5]
+UseParentVoice=1
+
+[rhb1,rhb2,rhb3]
+UseParentVoice=1
+
+[ktb1,ktb2,ktb3]
+UseParentVoice=1
+
+[tdb1]
+Voice=103
+AnimGroup=fatman
+
+[tdb2]
+Voice=102
+
+[tdb3]
+UseParentVoice=1
+
+[fam4,fam5]
+UseParentVoice=1
+
+[sev1,sev2,sev3]
+UseParentVoice=1
+
+[tem1,tem2,tem3]
+UseParentVoice=1
+
+[lsv4,lsv5]
+UseParentVoice=1
+
+[vla4,vla5]
+UseParentVoice=1
+
+[sfpdm1,lvpdm1,dsherm1,csherm1]
+UseParentVoice=1
