fatman69 belt adjuster + impaler

--- a/modloader/CommunityCutsceneFixes/ModelVariations_Vehicles.ini
+++ b/modloader/CommunityCutsceneFixes/ModelVariations_Vehicles.ini
@@ -1,6 +1,6 @@
 [Settings]
 ChangeCarGenerators=0
-ChangeScriptedCars=0
+ChangeScriptedCars=1
 DisablePayAndSpray=1
 EnableLights=1
 EnableSideMissions=1
@@ -21,3 +21,11 @@ SanFierro=14000
 LasVenturas=14001
 [14000,14001,14002]
 ParentModel=523
+[492]
+Global=
+ParentModel=
+[14003]
+ParentModel=
+
+[405]
+Global=
