--- a/modloader/CommunityCutsceneFixes/cleo/Drive by Fix.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/Drive by Fix.ini
@@ -1,7 +1,7 @@
 ; Enable = 1 , Disable = 0
 
 [Mission]
-Sweet = 1 ; Enables Sweet's special Model in game
+Sweet = 1 ; Enables Sweet's special Model in game  
 Smoke = 1 ; Enables Smoke's special Model in game
 Ryder = 1 ; Enables Ryder's special Model in game
 Sweet2 = 1 ; Enables Sweet's special Model 2 in game
@@ -12,3 +12,8 @@ SweetModel2 = SWEET4
 Kilo1 = ktb1
 Kilo2 = ktb2
 Kilo3 = ktb3
+ArtworkCar = 1 ; Enables Artwork Car
+CarModel = 14003
+CarColor1 = 114
+CarColor2 = 114
+;114 green, 64 orange
