--- a/modloader/CommunityCutsceneFixes/data/handling.cfg
+++ b/modloader/CommunityCutsceneFixes/data/handling.cfg
@@ -261,7 +261,7 @@ ROLLER	     1000.0    1354.2   4.0    0.0 0.0 -0.1  70  0.55 0.85 0.5  	3 160.0 
 ;
 ; name       mass     turnmass  drag   centreofmass  boy traction           transmission            brakes       steer  suspension       suslines        antidive   seat col  cost      mflags      hflags      lights
 ; A          B         C   	    D      F   G    H    I   J    K    L    	M N     O    P Q  R      S     T U    V    	a    b     c     d    e     f    g   		aa   ab   ac		af 			ag 			ah ai aj
-IMPALER      1800.0    4000.0   2.3    0.0 -0.3 0.0  75  0.75 0.85 0.52     5 160.0 24.0 10.0 R P   7.0   0.50 0 35.0   1.0  0.08  0.0   0.28 -0.20 0.45 0.3        0.25 0.60 35000     0       12010000        1  1    2
+IMPALER      1700.0    3800.0   2.0    0.0 0.05 -0.1 70  0.72 0.89 0.50     4 170.0 23.0 12.0 R P   6.7   0.50 0 32.0   1.2  0.09  0.0   0.30 -0.15 0.5  0.5        0.26 0.50 19000     40200000 12010001       0  0    0
 ;------- bikes -------------------------------------
 ;
 ; name       mass     turnmass  drag   centreofmass  boy traction           transmission            brakes       steer  suspension       suslines        antidive   seat col  cost      mflags      hflags      lights
