--- a/modloader/CommunityCutsceneFixes/ModelVariations_Vehicles.ini
+++ b/modloader/CommunityCutsceneFixes/ModelVariations_Vehicles.ini
@@ -8,14 +8,8 @@ EnableSiren=1
 EnableSpecialFeatures=1
 ExcludeCarGeneratorModels=492,600
 ExcludeModelsFromInheritance=596,597,598,599,490,497,472,432,433,523
-[599]
-Global=599,14002
-Wanted1=599,14002
-Wanted2=599,14002
-Wanted3=599,14002
-Wanted4=599
-Wanted5=599
-Wanted6=599
+[405]
+Global=
 [492]
 Global=
 ParentModel=
