--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -187,6 +187,9 @@ Global=115,vla5
 [12]
 PLS=
 
+[15]
+FlintCounty=
+
 [20]
 SUN1=
 
@@ -289,4 +292,7 @@ UseParentVoice=1
 UseParentVoice=1
 
 [carver]
+Voice=258
+
+[mrwht]
 Voice=258
