--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -153,3 +153,7 @@ SweetModel = SWTSHOT
 [Badlands]
 Carver = 1 ; Enables Carver's special Model in game
 Model = CARVER
+
+[Tanker Commander]
+MrWht = 1 ; Enables Mr. Whittaker's special Model in game (Mister White?)
+Model = MRWHT
