--- a/modloader/CommunityCutsceneFixes/cleo/CCF Cutscenes.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF Cutscenes.ini
@@ -1,8 +1,8 @@
 ; Enable = 1 , Disable = 0
 
 [SIREN]
-ID = 17996 ; Model's id if you want to change from Prolog.IDE.
+Model = COPSIREN 
 Duration = 3000 ; Duration of Siren. You can set 65500 as optional.
 
 [HALL]
-ID = 17995 ; Model's id if you want to change from sweetshall2.IDE.
+Model = SWEETSHALL2 
