--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -18,7 +18,7 @@ Model = BALMAN
 [Drive Thru]
 SeatFix = 1 ; Sweet and Smoke's seat fix.
 Eat = 1 ; Smoke stuffin meals.
-ModelID = 17997 ; Fries Model ID
+Model = FRIES
 Ballas = ktb2
 
 [Drive by]
@@ -34,7 +34,7 @@ Kilo1 = ktb1
 Kilo2 = ktb2
 Kilo3 = ktb3
 ArtworkCar = 1 ; Enables Artwork Car
-CarModel = 14000
+CarModel = IMPALER
 CarColor1 = 127
 CarColor2 = 127
 ;86 green, 127 orange
@@ -58,12 +58,12 @@ FreddyModel = FREDDY
 [Madd Dogg Rhymes]
 OGLoc = 1 ; Enables OG Loc's special Model in game
 Balaclava = 1 ; CJ wears balaclava and this makes the mission and stealth more realistic.
-Tanner = 0 ; Adds Driv3r on TV and makes the scene funnier.
+Tanner = 1 ; Adds Driv3r on TV and makes the scene funnier.
 Joystick = 1 ; Bodyguard will have a joystick.
 Fix = 1 ; CJ hands OG Loc rhymes book and the greeting changes.
 LocModel = OGBURG
-Tannertv = 17993
-Joystick = 17994
+Tannertv = TANNERTV
+Joysticks = JOYSTICK
 
 [Doberman]
 Grass = 1 ; Enables Grass's special Model in game
