Farewell My love

--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -157,3 +157,14 @@ Model = CARVER
 [Tanker Commander]
 MrWht = 1 ; Enables Mr. Whittaker's special Model in game (Mister White?)
 Model = MRWHT
+
+[Farewell My Love]
+Cat = 1 ; Enables Catalina's special Model in game
+CatModel = CAT2
+Claude = 1  ; Enables Claude's special Model in game
+ClaudeModel = CLAUDE
+Fix = 1 ; Car Fix
+CarModel = 477
+CarModel2 = 562
+CarModels = 477,562
+Taunts = 1 ; Enables Catalina's unused race taunts
