Are you going to San Fierro?

--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -168,3 +168,9 @@ CarModel = 477
 CarModel2 = 562
 CarModels = 477,562
 Taunts = 1 ; Enables Catalina's unused race taunts
+
+[Are You Going to San Fierro]
+Torch = 1 ; Truth will torch the weeds
+Fireproof = 1 ; This makes Truth fireproof (it is useful, if you use fire fix mods)
+Smoking = 1 `; Truth smokes in the car
+Cellphone = 1 ; Fix cellphone call.
