SF mission + LPP Chars Extra

--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -174,3 +174,7 @@ Torch = 1 ; Truth will torch the weeds
 Fireproof = 1 ; This makes Truth fireproof (it is useful, if you use fire fix mods)
 Smoking = 1 `; Truth smokes in the car
 Cellphone = 1 ; Fix cellphone call.
+
+[Wear Flowers in Your Hair]
+Dwayne = 1 ; Enables Dwayne special Model in game 
+Model = DWAYNE2
