SF mission + LPP Chars Extra

--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -309,6 +309,9 @@ UseParentVoice=
 Global=
 UseParentVoice=
 
+[293]
+Global=
+
 [299]
 Global=
 UseParentVoice=
@@ -391,6 +394,9 @@ Voice=258
 
 [cat,cat2]
 AnimGroup=woman
+UseParentVoice=1
+
+[dwayne2]
 UseParentVoice=1
 
 [lapdv1,sfpdv1,lvpdv1,lapdr1,lapdrv1]
