--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -296,6 +296,9 @@ ELS2=
 [147]
 MTCHI1=
 
+[240]
+Global=
+
 [290]
 Global=
 UseParentVoice=
@@ -386,6 +389,15 @@ UseParentVoice=1
 [vla4,vla5]
 UseParentVoice=1
 
+[dnb4]
+UseParentVoice=1
+
+[sfr4,sfr5]
+UseParentVoice=1
+
+[triadc]
+UseParentVoice=1
+
 [carver]
 Voice=258
 
@@ -397,6 +409,9 @@ AnimGroup=woman
 UseParentVoice=1
 
 [dwayne2]
+UseParentVoice=1
+
+[da]
 UseParentVoice=1
 
 [lapdv1,sfpdv1,lvpdv1,lapdr1,lapdrv1]
