--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -178,3 +178,7 @@ Cellphone = 1 ; Fix cellphone call.
 [Wear Flowers in Your Hair]
 Dwayne = 1 ; Enables Dwayne special Model in game 
 Model = DWAYNE2
+
+[555 WE TIP]
+DA = 1 ; Enables D.A. special Model in game 
+Model = DA
