--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -319,6 +319,25 @@ Global=
 Global=
 UseParentVoice=
 
+;Restored
+
+[16]
+Global=
+SanFierro=somyap
+LasVenturas=vwmyap
+
+[27]
+Global=27,260
+
+[136]
+Global=136,sbmytr4
+
+[188]
+Global=188,mediatr
+
+[261]
+Global=261,wmycd2
+
 ;New Special Characters
 [BALMAN]
 Voice=103
