--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -182,3 +182,7 @@ Model = DWAYNE2
 [555 WE TIP]
 DA = 1 ; Enables D.A. special Model in game 
 Model = DA
+
+[Deconstruction]
+Foreman = 1 Enables Foreman Model in game
+Model = 260
