--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -42,6 +42,7 @@ SUN4=tdb1
 IWD2=
 LACRAK=
 VIN2=
+ANGPI=
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
 
@@ -358,7 +359,10 @@ UseParentVoice=1
 AnimGroup=gang1
 UseParentVoice=1
 
-[cesar3]
+[ryder5]
+UseParentVoice=1
+
+[cesar3,cesar4]
 UseParentVoice=1
 
 [freddy]
@@ -431,6 +435,9 @@ UseParentVoice=1
 UseParentVoice=1
 
 [da]
+UseParentVoice=1
+
+[balgrd]
 UseParentVoice=1
 
 [lapdv1,sfpdv1,lvpdv1,lapdr1,lapdrv1]
