--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -185,4 +185,12 @@ Model = DA
 
 [Deconstruction]
 Foreman = 1 Enables Foreman Model in game
-Model = 260
+Model = 153
+
+[Photo Opportunity]
+Cesar = 1 ; Enables Cesar special Model in game 
+CesarModel = CESAR4
+Ryder = 1 ; Enables Ryder special Model in game 
+RyderModel = RYDER5
+Ballas = 1 ; Enables Ballas Guard special Model in game 
+BallasModel = BALGRD
