Jizzy + Some updates
Some missing subtitles added, new sfr gangs

--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -204,7 +204,6 @@ TRICAS=117,118
 [163]
 TRICAS=117,118
 
-
 ;Cops
 
 [280]
@@ -320,26 +319,13 @@ Global=
 Global=
 UseParentVoice=
 
-;Restored
-
-[16]
-Global=
-SanFierro=somyap
-LasVenturas=vwmyap
+;Restored on traffic
 
 [27]
 Global=27,260
 
-[136]
-Global=136,sbmytr4
-
-[188]
-Global=188,mediatr
-
-[261]
-Global=261,wmycd2
-
 ;New Special Characters
+
 [BALMAN]
 Voice=103
 
@@ -437,6 +423,9 @@ UseParentVoice=1
 UseParentVoice=1
 
 [balgrd]
+UseParentVoice=1
+
+[somyyap,vwmyap,sbmytr4,sbmytr4]
 UseParentVoice=1
 
 [lapdv1,sfpdv1,lvpdv1,lapdr1,lapdrv1]
