Mountain Cleoude Bois

--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -194,3 +194,10 @@ Ryder = 1 ; Enables Ryder special Model in game
 RyderModel = RYDER5
 Ballas = 1 ; Enables Ballas Guard special Model in game 
 BallasModel = BALGRD
+
+[Mountain Cloud Boys]
+Mediator = 1 ; Enables Mediator special Model in game 
+Model = Mediatr
+Blood Feather = 1 ; Enable Blood Feather Triad models
+BFT1 = bft1
+BFT2 = bft2
