Ran Fa Li + New Triad Members + IG Chars Update

--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -196,10 +196,13 @@ Global=123,dnb4
 
 ;Triads
 [117]
-Global=
+Global=117,triade
 
 [118]
 Global=118,triadc
+
+[120]
+Global=120,triadd
 
 [164]
 TRICAS=117,118
@@ -417,7 +420,7 @@ UseParentVoice=1
 [sfr4,sfr5]
 UseParentVoice=1
 
-[triadc]
+[triadc,triadd,triade]
 UseParentVoice=1
 
 [carver]
