--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -292,6 +292,9 @@ FlintCounty=
 Global=
 SanFierro=
 
+[18]
+MARKST=
+
 [20]
 SUN1=
 
@@ -299,6 +302,13 @@ SUN1=
 IWD2=
 LACRAK=
 MergeInteriorsWithCitiesAndZones=
+
+[46]
+SMB2=
+SMB1=
+ROD3A=
+ROD3B=
+ROD1A=
 
 [47]
 SanFierro=143
@@ -311,6 +321,8 @@ ELS2=
 
 [147]
 MTCHI1=
+SanFierro=
+MARKST=
 
 [240]
 Global=
@@ -441,8 +453,14 @@ UseParentVoice=1
 [balgrd]
 UseParentVoice=1
 
-[somyyap,vwmyap,sbmytr4,sbmytr4]
+[reporter]
 UseParentVoice=1
+
+[jrnalst]
+UseParentVoice=1
+
+[mexcab]
+Voice=184
 
 [lapdv1,sfpdv1,lvpdv1,lapdr1,lapdrv1]
 UseParentVoice=1
