--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -201,3 +201,11 @@ Model = Mediatr
 Blood Feather = 1 ; Enable Blood Feather Triad models
 BFT1 = bft1
 BFT2 = bft2
+
+[Snail Trail]
+Reporter = 1 ; Enables Reporter special Model in game 
+Model1 = REPORTER
+Journalist = 1 ; Enables Journalist special Model in game 
+Model2 = JRNALST
+TaxiDriver = 1 ; Enables Taxi Driver special Model in game 
+Model3 = MEXCAB 
