--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -491,3 +491,15 @@ UseParentVoice=1
 
 [csherv,dsherv]
 UseParentVoice=1
+
+[bogman]
+Voice=258
+
+[bettina]
+Voice=178
+
+[dancea,danceb,hornd]
+Voice=178
+
+[bfywai,wfywai]
+UseParentVoice=1
