--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -324,6 +324,12 @@ MTCHI1=
 SanFierro=
 MARKST=
 
+[214]
+PDOMES=wfywai,bfywai
+PDOMES2=wfywai,bfywai
+BATTP=wfywai,bfywai
+MergeInteriorsWithCitiesAndZones=1
+
 [240]
 Global=
 
