--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -208,4 +208,12 @@ Model1 = REPORTER
 Journalist = 1 ; Enables Journalist special Model in game 
 Model2 = JRNALST
 TaxiDriver = 1 ; Enables Taxi Driver special Model in game 
-Model3 = MEXCAB 
+Model3 = MEXCAB
+
+[Ice Cold Killa]
+Bettina = 1 ; Enables Bettina special Model in game 
+BettinaModel = BETTINA
+Bogman = 1 ; Enables Bogman special Model in game 
+BogmanModel = BOGMAN
+Bfypro=1
+Bmymoun=1  
