--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -43,6 +43,7 @@ IWD2=
 LACRAK=
 VIN2=
 ANGPI=
+SanFierro=
 MergeInteriorsWithCitiesAndZones=
 MergeZonesWithCities=
 
@@ -77,6 +78,7 @@ SUN3B=tdb2
 SUN3C=tdb2
 SUN4=tdb2
 VIN2=
+SanFierro=
 MergeZonesWithCities=
 
 [104]
@@ -184,8 +186,13 @@ Global=114,vla4
 Global=115,vla5
 
 ;San Fierro Rifa
+[173]
+Global=
+
 [174]
 Global=174,sfr4
+SanFierro=
+MergeZonesWithCities=
 
 [175]
 Global=175,sfr5
@@ -197,6 +204,8 @@ Global=123,dnb4
 ;Triads
 [117]
 Global=117,triade
+SanFierro=
+MergeZonesWithCities=
 
 [118]
 Global=118,triadc
