--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -216,4 +216,16 @@ BettinaModel = BETTINA
 Bogman = 1 ; Enables Bogman special Model in game 
 BogmanModel = BOGMAN
 Bfypro=1
-Bmymoun=1  
+Bmymoun=1
+
+[Pier 69]
+Ryder = 1 ; Enables Ryder special Model in game 
+RyderModel = RYDER5
+Ballas = 1 ; Enables Ballas Guard special Model in game 
+BallasModel = BALGRD
+TriadCar = 1 ; Changes Triad Car
+CarModel = SULTAN
+Ballas2 = 102,103,104
+Rifas = 173,174,175
+Triads = 117,118
+Triboss = 120  
