The Da Nang Thang

--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -200,6 +200,7 @@ Global=175,sfr5
 ;Da Nang Boys
 [122]
 Global=122,dnb5
+SANB1=122,123,dnb5
 
 [123]
 Global=123,dnb4
@@ -325,6 +326,9 @@ ROD1A=
 [47]
 SanFierro=143
 
+[49]
+SANB1=snake
+
 [100]
 SanFierro=250
 
@@ -444,7 +448,7 @@ UseParentVoice=1
 [vla4,vla5]
 UseParentVoice=1
 
-[dnb4]
+[dnb4,dnb5]
 UseParentVoice=1
 
 [sfr4,sfr5]
@@ -479,6 +483,9 @@ UseParentVoice=1
 
 [mexcab]
 Voice=184
+
+[snake]
+UseParentVoice=1
 
 [lapdv1,sfpdv1,lvpdv1,lapdr1,lapdrv1]
 UseParentVoice=1
