Yay Ka-Boom-Boom

--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -228,4 +228,8 @@ CarModel = SULTAN
 Ballas2 = 102,103,104
 Rifas = 173,174,175
 Triads = 117,118
-Triboss = 120  
+Triboss = 120
+
+[Yay Ka-Boom-Boom]
+Trimech = 1; Enables Triad Mechanic Model in game
+Model = TRIMECH   
