--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -232,4 +232,8 @@ Triboss = 120
 
 [Yay Ka-Boom-Boom]
 Trimech = 1; Enables Triad Mechanic Model in game
-Model = TRIMECH   
+Model = TRIMECH
+
+[Test Drive]
+Cesar = 1 ; Enables Cesar's special Model in game
+CesarModel = CESAR3   
