Customs Fast Track + Garage Table Updated

--- a/modloader/$fla/data/gtasa_vehicleAudioSettings.cfg
+++ b/modloader/$fla/data/gtasa_vehicleAudioSettings.cfg
@@ -288,6 +288,7 @@ enforcsf                                    0             81     80     0       
 enforcvg                                    0             81     80     0         0.7          1.33484      9         1.12246      3           0          13         3           18                0.0
 detcar                                      0             87     86     0         0.7          1.0          2         1.05946      2           0          13         3           38                0.0
 detcarvg                                    0             87     86     0         0.7          1.0          7         1.05946      2           0          13         3           38                0.0
+secucar                                     0             8      7      0         0.78         1.0          3         1.12246      2           0          11         0           4                 0.0
 ;
 ;
 ;the end
