--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -311,6 +311,9 @@ MARKST=
 [20]
 SUN1=
 
+[24]
+EASB2=
+
 [28]
 IWD2=
 LACRAK=
@@ -353,7 +356,7 @@ MergeInteriorsWithCitiesAndZones=1
 Global=
 
 [290]
-Global=
+Global=CESAR3
 UseParentVoice=
 AnimGroup=
 
@@ -531,3 +534,9 @@ Voice=178
 
 [bfywai,wfywai]
 UseParentVoice=1
+
+[bmypig]
+Voice=24
+
+[wmypig]
+Voice=71
