--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -236,4 +236,12 @@ Model = TRIMECH
 
 [Test Drive]
 Cesar = 1 ; Enables Cesar's special Model in game
-CesarModel = CESAR3   
+CesarModel = CESAR3
+
+[Custom Fast Tracks]
+Cesar = 1 ; Enables Cesar's special Model in game
+CesarModel = CESAR3
+Secucar = 1 ; Enables Security Car
+CarModel = SECUCAR
+PIG = 1 ; Enables PIG's special Models in game
+PIGModel = wmypig,bmypig  
