--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -319,6 +319,9 @@ IWD2=
 LACRAK=
 MergeInteriorsWithCitiesAndZones=
 
+[40]
+SanFierro=
+
 [46]
 SMB2=
 SMB1=
@@ -540,3 +543,6 @@ Voice=24
 
 [wmypig]
 Voice=71
+
+[hfydriv]
+UseParentVoice=1
