--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -244,4 +244,8 @@ CesarModel = CESAR3
 Secucar = 1 ; Enables Security Car
 CarModel = SECUCAR
 PIG = 1 ; Enables PIG's special Models in game
-PIGModel = wmypig,bmypig  
+PIGModel = wmypig,bmypig
+
+[Puncture Wounds]
+Girl = 1 ; Enables Girl's special Model in game
+GirlModel = HFYDRIV  
