--- a/modloader/CommunityCutsceneFixes/cleo/CCF.ini
+++ b/modloader/CommunityCutsceneFixes/cleo/CCF.ini
@@ -248,4 +248,10 @@ PIGModel = wmypig,bmypig
 
 [Puncture Wounds]
 Girl = 1 ; Enables Girl's special Model in game
-GirlModel = HFYDRIV  
+GirlModel = HFYDRIV
+
+[Highjack]
+Cesar = 1 ; Enables Cesar special Model in game 
+CesarModel = CESAR4
+Driver = 1 ; Enables Truck Driver Model in game 
+DriverModel = DNMOLC2 
