--- a/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
+++ b/modloader/CommunityCutsceneFixes/MODELVARIATIONS_PEDS.INI
@@ -362,7 +362,7 @@ MergeInteriorsWithCitiesAndZones=1
 Global=
 
 [290]
-Global=
+Global=CESAR3
 UseParentVoice=
 AnimGroup=
 
@@ -543,9 +543,11 @@ UseParentVoice=1
 
 [bmypig]
 Voice=24
+AnimGroup=man
 
 [wmypig]
 Voice=71
+AnimGroup=man
 
 [hfydriv]
 UseParentVoice=1
